objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>LST or DX - Another segmentation field which attempts to group by clinical or LS. Not sure if still used</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic institution</fullName>
                </value>
                <value>
                    <fullName>Cancer Center</fullName>
                </value>
                <value>
                    <fullName>Children’s Hospital</fullName>
                </value>
                <value>
                    <fullName>Commercial Lab</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Cancer Center</fullName>
                </value>
                <value>
                    <fullName>Hematology-Oncology practice</fullName>
                </value>
                <value>
                    <fullName>Hospital Lab</fullName>
                </value>
                <value>
                    <fullName>Other(s)</fullName>
                </value>
                <value>
                    <fullName>Physician Practice</fullName>
                </value>
                <value>
                    <fullName>Research Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Report (NTD FTS only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ga_Low_Limit__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Ga Low Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lab_Services__c</fullName>
        <description>(select all that apply)</description>
        <inlineHelpText>(select all that apply)</inlineHelpText>
        <label>Lab Services Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prenatal</fullName>
                </value>
                <value>
                    <fullName>Postnatal</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Hospital/Hospital Lab</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Hospital</fullName>
                </value>
                <value>
                    <fullName>Commercial Lab</fullName>
                </value>
                <value>
                    <fullName>Academic Institution</fullName>
                </value>
                <value>
                    <fullName>Cancer Center</fullName>
                </value>
                <value>
                    <fullName>Tech only</fullName>
                </value>
                <value>
                    <fullName>Physician Practice - OB</fullName>
                </value>
                <value>
                    <fullName>Physician Practice - MFM</fullName>
                </value>
                <value>
                    <fullName>SonoCenter</fullName>
                </value>
                <value>
                    <fullName>Referring linked to SonoCenter</fullName>
                </value>
                <value>
                    <fullName>Single location - no associated account</fullName>
                </value>
                <value>
                    <fullName>Sequential Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyAcctID__c</fullName>
        <description>6/30/2017 - Approved for Deletion</description>
        <externalId>true</externalId>
        <label>LegacyAcctID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                    <default>true</default>
                    <label>Corporation</label>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NTD_eReports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NTD eReports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_City__c</fullName>
        <description>SAP - KNA1/ORT01. City</description>
        <label>PKI SAP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_ID__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Physician ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Industry__c</fullName>
        <label>SAP Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAP_Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_pre__c</fullName>
        <label>Screening Software Supplier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lifecycle</fullName>
                </value>
                <value>
                    <fullName>Astraia</fullName>
                </value>
                <value>
                    <fullName>Viewpoint</fullName>
                </value>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Fastscreen</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>SScwLab</fullName>
                </value>
                <value>
                    <fullName>Homebrew</fullName>
                </value>
                <value>
                    <fullName>Roche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_DX__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>IT4</fullName>
                </value>
                <value>
                    <fullName>SN1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>DN1</fullName>
                </value>
                <value>
                    <fullName>N1</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>F3</fullName>
                </value>
                <value>
                    <fullName>F4</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>SA1</fullName>
                </value>
                <value>
                    <fullName>SA2</fullName>
                </value>
                <value>
                    <fullName>PT1</fullName>
                </value>
                <value>
                    <fullName>EC1</fullName>
                </value>
                <value>
                    <fullName>EC2</fullName>
                </value>
                <value>
                    <fullName>EC3</fullName>
                </value>
                <value>
                    <fullName>EC4</fullName>
                </value>
                <value>
                    <fullName>EC5</fullName>
                </value>
                <value>
                    <fullName>ES1</fullName>
                </value>
                <value>
                    <fullName>ES2</fullName>
                </value>
                <value>
                    <fullName>ES3</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>UK2</fullName>
                </value>
                <value>
                    <fullName>UK3</fullName>
                </value>
                <value>
                    <fullName>EX1</fullName>
                </value>
                <value>
                    <fullName>EX2</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <description>Power of One - Returns the count of accounts in reports which include child records on the account and not the total record count</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <label>Account Alias</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>NTD SDx use</description>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Crl_Low_Limit__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Crl Low Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FULL_Language__c</fullName>
        <formula>IF( ISPICKVAL(PKI_SAP_Language__c, &quot;AF&quot;), &quot;Afrikaans&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;AR&quot;), &quot;Arabic&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;BG&quot;), &quot;Bulgarian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;CA&quot;), &quot;Catalan / Valencian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;CS&quot;), &quot;Czech&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;DA&quot;), &quot;Danish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;DE&quot;), &quot;German&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;EL&quot;), &quot;Greek modern&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;EN&quot;), &quot;English&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ES&quot;), &quot;Spanish / Castilian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ET&quot;), &quot;Estonian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;FI&quot;), &quot;Finnish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;FR&quot;), &quot;French&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HE&quot;), &quot;Hebrew modern&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HI&quot;), &quot;Hindi&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HR&quot;), &quot;Croatian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;HU&quot;), &quot;Hungarian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ID&quot;), &quot;Indonesian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;IS&quot;), &quot;Icelandic&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;IT&quot;), &quot;Italian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;JA&quot;), &quot;Japanese&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;KO&quot;), &quot;Korean&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;LT&quot;), &quot;Lithuanian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;LV&quot;), &quot;Latvian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;MI&quot;), &quot;Midway Island&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;MS&quot;), &quot;Malay&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;NL&quot;), &quot;Dutch&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;NO&quot;), &quot;Norwegian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;PL&quot;), &quot;Polish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;PT&quot;), &quot;Portuguese&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;RO&quot;), &quot;Romanian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;RU&quot;), &quot;Russian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SH&quot;), &quot;Serbian Latin&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SK&quot;), &quot;Slovak&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SL&quot;), &quot;Slovene&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SR&quot;), &quot;Serbian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SU&quot;), &quot;Union Of Soviet Socialist Republics&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;SV&quot;), &quot;Swedish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;TH&quot;), &quot;Thai&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;TR&quot;), &quot;Turkish&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;UK&quot;), &quot;Ukrainian&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;WK&quot;), &quot;Wake Island&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;XT&quot;), &quot;Turkish Republic of Northern Cyprus&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;Z1&quot;), &quot;Customer reserve&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ZF&quot;), &quot;Chinese Trad.&quot;,
IF( ISPICKVAL(PKI_SAP_Language__c, &quot;ZH&quot;), &quot;Chinese&quot;,
&quot;Select ISO Code Above&quot;)
)))))))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LW_Support_ID__c</fullName>
        <description>6/30/2017 - Approved for Deletion</description>
        <label>LW Support ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIPT_eReports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIPT eReports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Phone__c</fullName>
        <description>SAP - KNA1/TELF1. First Telephone Number</description>
        <label>PKI SAP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PKI_VATNumber__c</fullName>
        <label>PKI VATNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Types__c</fullName>
        <label>Partner Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Solutions Partner</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sonocenter_ID__c</fullName>
        <label>NTD Sonocenter ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <description>used for NTD / SDx 11/10/15 - To Be Deleted</description>
        <label>Billing Method</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_lives__c</fullName>
        <description>DX - 6/15/2017 not sure of still used</description>
        <label># Enrolled lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finch_Platform__c</fullName>
        <label>Finch Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- none --</fullName>
                </value>
                <value>
                    <fullName>Finch (legacy customers)</fullName>
                </value>
                <value>
                    <fullName>Finch Content Management Warehouse</fullName>
                </value>
                <value>
                    <fullName>Finch LIMS</fullName>
                </value>
                <value>
                    <fullName>Finch LIMS with Integrated Analytics</fullName>
                </value>
                <value>
                    <fullName>Finch eCommerce LIMS</fullName>
                </value>
                <value>
                    <fullName>Finch for Genetic Testing</fullName>
                </value>
                <value>
                    <fullName>Finch for Clinical Trial Data Management</fullName>
                </value>
                <value>
                    <fullName>Finch for Bio-therapeutic Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Geo_Region__c</fullName>
        <formula>&apos;&apos;</formula>
        <label>Geo Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>ADMET</fullName>
                </value>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Agriculture &amp; Feed</fullName>
                </value>
                <value>
                    <fullName>API Synthesis/Scale-Up</fullName>
                </value>
                <value>
                    <fullName>Assay Development</fullName>
                </value>
                <value>
                    <fullName>Automotive &amp; Machinery</fullName>
                </value>
                <value>
                    <fullName>BEER BEV AND WINE</fullName>
                </value>
                <value>
                    <fullName>BioTech</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cell Biology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Clinical Research</fullName>
                </value>
                <value>
                    <fullName>COMMERCIAL CONTRACT TESTING LABS</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>FEED &amp; PET FOOD</fullName>
                </value>
                <value>
                    <fullName>Forensic Science</fullName>
                </value>
                <value>
                    <fullName>Genomics/Genetics</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>GRAIN GENERAL &amp; TRADE UNPROCESSED (INCL FARMERS)</fullName>
                </value>
                <value>
                    <fullName>GRAIN PROCESSING (INCL STARCH PRODUCTION)</fullName>
                </value>
                <value>
                    <fullName>Hospitals &amp; Clinics</fullName>
                </value>
                <value>
                    <fullName>Immunology</fullName>
                </value>
                <value>
                    <fullName>Independent Testing</fullName>
                </value>
                <value>
                    <fullName>Lead Discovery</fullName>
                </value>
                <value>
                    <fullName>Lead Validation &amp; Optimization</fullName>
                </value>
                <value>
                    <fullName>LIQUID MILK</fullName>
                </value>
                <value>
                    <fullName>MEAT</fullName>
                </value>
                <value>
                    <fullName>Metals</fullName>
                </value>
                <value>
                    <fullName>Microbiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_1__c</fullName>
        <description>SAP - KNA1/NAME1. This holds the company name</description>
        <label>PKI SAP Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_2__c</fullName>
        <description>SAP - KNA1/NAME2</description>
        <label>PKI SAP Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Name_3__c</fullName>
        <description>SAP - KNA1/NAME3</description>
        <label>Institute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Region__c</fullName>
        <description>SAP - KNA1/REGIO. Region (State,Province,County)</description>
        <label>PKI SAP Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Street__c</fullName>
        <description>SAP - KNA1/STRAS. House number and street</description>
        <label>PKI SAP Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_TaxNumber2__c</fullName>
        <description>srvcmax integration field</description>
        <label>PKI TaxNumber2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_TaxNumber4__c</fullName>
        <label>PKI TaxNumber4</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_TaxNumber5__c</fullName>
        <label>PKI TaxNumber5</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Reagents_1__c</fullName>
        <description>11/10/15 - To be deleted</description>
        <label>Reagents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAPP-A</fullName>
                </value>
                <value>
                    <fullName>fHCGb</fullName>
                </value>
                <value>
                    <fullName>HCG Intact</fullName>
                </value>
                <value>
                    <fullName>uE3</fullName>
                </value>
                <value>
                    <fullName>Inhibin</fullName>
                </value>
                <value>
                    <fullName>AFP</fullName>
                </value>
                <value>
                    <fullName>PLGF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Reagents_2__c</fullName>
        <description>11/10/15 - To be deleted</description>
        <label>Reagents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAPP-A</fullName>
                </value>
                <value>
                    <fullName>fHCGb</fullName>
                </value>
                <value>
                    <fullName>HCG Intact</fullName>
                </value>
                <value>
                    <fullName>uE3</fullName>
                </value>
                <value>
                    <fullName>Inhibin</fullName>
                </value>
                <value>
                    <fullName>AFP</fullName>
                </value>
                <value>
                    <fullName>PLGF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Zip_Code__c</fullName>
        <description>Allows for the deduplication of Accounts</description>
        <inlineHelpText>The sales team can enter corrections to the address supplied by the ERP systems</inlineHelpText>
        <label>Sales Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Other__c</fullName>
        <label>Software Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lifecycle</fullName>
                </value>
                <value>
                    <fullName>Astraia</fullName>
                </value>
                <value>
                    <fullName>Viewpoint</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>Predictor</fullName>
                </value>
                <value>
                    <fullName>Homebrew</fullName>
                </value>
                <value>
                    <fullName>Roche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Other__c</fullName>
        <label>Reagent Supplier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>Roche</fullName>
                </value>
                <value>
                    <fullName>ThermoFisher</fullName>
                </value>
                <value>
                    <fullName>Alere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_pre_1__c</fullName>
        <label>NIPT Supplier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sequenom(Lifecodexx)</fullName>
                </value>
                <value>
                    <fullName>Verinata</fullName>
                </value>
                <value>
                    <fullName>Natera</fullName>
                </value>
                <value>
                    <fullName>BGI and Ariosa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_pre_2__c</fullName>
        <label>Screening Reagent Supplier 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerkinElmer</fullName>
                </value>
                <value>
                    <fullName>Roche</fullName>
                </value>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>ThermoFisher</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zipcode_Length__c</fullName>
        <formula>LEN( ShippingPostalCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allbound_Status__c</fullName>
        <label>Allbound Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dx_INDIA_Region__c</fullName>
        <label>Dx INDIA Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GA_Account_Flag__c</fullName>
        <description>PKI - Displays a graphic indicating that the account record is a global account</description>
        <formula>IF(NOT(ISBLANK( GA_Global_Account_Program__c)),IMAGE(&quot;/resource/GA_Account_Flag&quot;, &quot;GA Account&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Global Account Flag</inlineHelpText>
        <label>Account Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Services_DX__c</fullName>
        <description>Used to identify NTD Dx Lab Service accounts, More Info refer [ CHG0030646 ] on OnIT
Business Contact: Linda Durig
Technical Contact : Shashi Puttaswamy</description>
        <displayFormat>{0000000000}</displayFormat>
        <label>SFDC Account #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Laboratory_Type__c</fullName>
        <label>Laboratory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hospitals/Clinics</fullName>
                </value>
                <value>
                    <fullName>Independent/Contract Labs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NIPT_Fax_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIPT Fax Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKI_ParentChild__c</fullName>
        <description>Used by FIND DUPLICATES application. Contact Shashi Puttaswamy</description>
        <label>Parent/Child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKI_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Channel__c</fullName>
        <label>Primary Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_City_Name__c</fullName>
        <description>Allows for the deduplication of Accounts</description>
        <inlineHelpText>The sales team can enter corrections to the address supplied by the ERP systems</inlineHelpText>
        <label>Sales City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Office (GeoCode)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>update_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to run update action</description>
        <label>update checkbox</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>